{
    "name": "GameInput",
    "maps": [
        {
            "name": "LeftPlayer",
            "id": "2099ecf3-deac-43c7-9397-e5929ba63dd3",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "1227cf08-71b2-4510-b5bb-d252829a48f7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard (Default)",
                    "id": "ad9908aa-5127-45a3-9a74-d4bc1a42e886",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "80dd44f2-4061-4a65-8b5a-1050ad4ecb34",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8f80743d-b158-4940-8bd6-3713c6c94ed4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "RightPlayer",
            "id": "d9f67d2e-116c-422c-946e-a3f46c001768",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "abed7bd7-42c8-4523-a36a-39b52b9ea47e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard (Arrow Keys)",
                    "id": "9e2b1845-91ad-4da9-a84a-7cf333173691",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "343244db-9dd4-4b38-8715-517a12029ded",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a756da4b-6cbd-404b-8116-f9bd7fc9e661",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Game",
            "id": "0be05278-4d49-4b21-9f24-4d0e43f9e85e",
            "actions": [
                {
                    "name": "StartGame",
                    "type": "Button",
                    "id": "5af911dd-4207-46c4-8eea-b501656fe91f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "284d7f52-2592-4134-87c3-18aeeed03ee4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6495c95-7be8-414c-916c-eab79083fb7f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c6728d9-2fa9-46ca-b893-c5cecef92c43",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}